# simple-recipe-app

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
django_recipes/: asgi.py  settings.py  urls.py  wsgi.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_remove_recipe_ingredients_recipe_ingredients.py  0003_ingredient_amount_remove_recipe_ingredients_and_more.py  0004_remove_ingredient_amount_alter_recipe_ingredients.py
templates/: base.html  index.html
templates/recipes/: recipe_detail.html  recipe_list.html
