[tool.poetry]
name = "simple-recipe-app"
version = "0.1.0"
description = "Simple recipe app"
authors = ["Dev Gill"]
license = "MIT"
readme = "README.md"
packages = [{include = "simple_recipe_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
